# clean-dci-architecture

./: .cproject  .project  CMakeLists.txt  LICENSE  build.sh
3th/include/cub/dci/: fractal.h
3th/lib/: gtest-vc10.lib  gtest-vc80.lib  gtest-vc90.lib
include/l1-domain/behavior/driving/: DrivingNavigation.h  ParkingTheCar.h  PlanTravelRoute.h  SendDrivingStartInd.h  SendReachTheGoalInd.h  SendRoutePlanCompletedInd.h  StartDriving.h
include/l1-domain/behavior/tdd/: ImproveCodeQuality.h  MakeOnlyEnoughCodeToPassTest.h  SendRefactorCompletedInd.h  SendTestCompletedInd.h  WriteAFailingTest.h
include/l1-domain/interface/: Instance.h
include/l1-domain/interface/driving/: CarDriver.h  Copilot.h  DrivingInf.h  DrivingMsg.h
include/l1-domain/interface/pair/: PairDriver.h  PairInf.h  PairObserver.h
include/l1-domain/interface/tdd/: TddInf.h  TddMsg.h
include/l1-domain/model/driving/: ConcreteCarDriver.h  ConcreteCopilot.h  Driving.h
include/l1-domain/model/pair/: ConcretePairDriver.h  ConcretePairObserver.h  PairProgramming.h
include/l1-domain/model/tdd/: Tdd.h
include/l2-use-case/context/drving/: NavigateAction.h  ParkingAction.h  RoutePlanAction.h  StartDrvingAction.h
include/l2-use-case/context/tdd/: TddCodingAction.h  TddEndAction.h  TddRefactorAction.h  TddStartAction.h  TddTestAction.h
include/l2-use-case/interactions/: Development.h  GoHome.h
include/l4-infra/: cda.h
include/l4-infra/cub/algo/: bits.h  bound.h  loop.h  max_min.h  range.h  search.h
include/l4-infra/cub/base/: Assertions.h  BaseTypes.h  ConstExpr.h  Default.h  Keywords.h  NullPtr.h  StaticAssert.h  Status.h
include/l4-infra/cub/dci/: ListBasedRole.h  Role.h  Unknown.h  fractal.h
include/l4-infra/cub/dci/interp/: DeclRoleInterp.h  HasRoleInterp.h  ImplRoleInterp.h
include/l4-infra/cub/gof/: Singleton.h  State.h
include/l4-infra/cub/log/: ConsoleState.h  log.h
include/l4-infra/cub/mem/: AutoMsg.h  LinkedAllocator.h  Maybe.h  MsgAllocator.h  MsgNewOperator.h  ObjectAllocator.h  Placement.h  PlainTransData.h  ScopeExit.h  SharedObject.h  SmartPtr.h  StructObject.h  StructWrapper.h  TransData.h
include/l4-infra/cub/network/: ByteOrder.h
include/l4-infra/cub/sched/: Executor.h  Synchronization.h  ThreadData.h
include/l4-infra/cub/utils/: DefaultConstructor.h  FunctionTraits.h  LambdaTraits.h
include/l4-infra/event/: event.h
include/l4-infra/event/concept/: Event.h  EventId.h  EventInfo.h  InvalidMsgSize.h
include/l4-infra/event/impl/: BaseEventInfo.h  ConsecutiveEventInfo.h  ScatteredEventInfo.h  SimpleEventInfo.h
include/l4-infra/trans-dsl/: TransactionDSL.h  TslStatus.h
include/l4-infra/trans-dsl/action/: Action.h  SimpleAsyncAction.h  SimpleAsyncActionHelper.h  SyncAction.h  SyncActionAdapter.h
include/l4-infra/trans-dsl/utils/: ActionMacroHelper.h  ActionStatus.h  AdaptedTimerInfo.h  DummyAction.h  EventHandlerRegistry.h  GofState.h  RelativeTimer.h  RuntimeContextAutoSwitch.h  SimpleRuntimeContext.h  SimpleRuntimeContextAutoSwitch.h  StopCause.h
src/l1-domain/behavior/driving/: DrivingNavigation.cpp  ParkingTheCar.cpp  PlanTravelRoute.cpp  SendDrivingStartInd.cpp  SendReachTheGoalInd.cpp  SendRoutePlanCompletedInd.cpp  StartDriving.cpp
src/l1-domain/behavior/tdd/: ImproveCodeQuality.cpp  MakeOnlyEnoughCodeToPassTest.cpp  SendRefactorCompletedInd.cpp  SendTestCompletedInd.cpp  WriteAFailingTest.cpp
src/l1-domain/model/: Instance.cpp
src/l1-domain/model/driving/: ConcreteCarDriver.cpp  ConcreteCopilot.cpp
src/l1-domain/model/pair/: ConcretePairDriver.cpp  ConcretePairObserver.cpp
src/l2-use-case/context/driving/: NavigateAction.cpp  ParkingAction.cpp  RoutePlanAction.cpp  StartDrvingAction.cpp
src/l2-use-case/context/tdd/: TddCodingAction.cpp  TddEndAction.cpp  TddRefactorAction.cpp  TddStartAction.cpp  TddTestAction.cpp
test/: go-home-trans-test.cpp  tdd-trans-test.cpp
(+118 files in other folders)
